<resources>
    <string name="app_name">Entertainment</string>
    <string name="img_desc">image</string>
    <string name="str_video">Video</string>
    <string name="str_app"></string>
    <string name="str_setting"></string>
    <string name="str_day">day</string>
    <string name="str_add">Add</string>
    <string name="str_nospace">Shortcuts no space!</string>
    <string name="str_exit">exit</string>
    <!-- 星期 -->
    <string name="sun">Sunday</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>

    <string name="network_error">The network is not available</string>
    <string name="parse_error">Abnormal data parsing</string>
    <string name="clear_success">Clear data successfully:</string>
    <string name="clear_fail">Clear data fail</string>
    <string name="no_data">The current application without saving any data</string>

    <string name="set_launcher">Set the startup</string>
    <string name="click_set_launcher">*Click set upon boot</string>
    <string name="cancel_launcher">Cancel the startup</string>
    <string name="click_cancel_launcher">*Click on the cancel upon boot</string>
    <string name="set_launcher_success">Has been set for the startup</string>
    <string name="auto_location_faild">You will not be able to automatically obtain the local weather</string>
    <string name="uninstall_str">uninstall</string>
    <string name="clear_data">Clear data</string>
    <string name="app_not_exist">Set the startup of the app does not exist</string>
    <string name="shortcut_invalid">This shortcut is invalid</string>

</resources>
